--- a/matlab/package.json
+++ b/matlab/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
     "lint": "eslint"
   },
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "pagefind": "^1.4.0",
     "tailwindcss": "^4"
   }
 }
