--- a/matlab/package.json
+++ b/matlab/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.1.3",
+    "next-themes": "^0.4.6",
     "nextra": "^4.6.1",
     "nextra-theme-docs": "^4.6.1",
     "react": "19.2.3",
